@@ -1,3 +1,10 @@
+ags (0.7.126)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved mutices for recalls
+	* improved AGS_THREAD_INTERMEDIATE_POST_SYNC
+	* disabled ags_main_loop_interrupt() in ags_jack_client_process_callback()
+
 ags (0.7.125)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
